fixing mutability of financial stats dictionary in dashboard

--- a/FinancialAdvisorAppUI/wwwroot/index.html
+++ b/FinancialAdvisorAppUI/wwwroot/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Loading...This may take up to 10 seconds if it's your first time loading the website</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
